Ensure validation of fields occurs when collapsing fields (https://github.com/woocommerce/woocommerce-blocks/pull/11199)
* Ensure validation of fields occurs when collapsing fields

* update click for edit button

* turn off pointer events when hidden

* Add visibility rule

--- a/plugins/woocommerce-blocks/assets/js/blocks/checkout/address-wrapper/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/checkout/address-wrapper/style.scss
@@ -1,25 +1,32 @@
-.address-fade-transition-wrapper {
+.wc-block-components-address-address-wrapper {
 	position: relative;
-}
-.address-fade-transition-enter {
-	opacity: 0;
-}
-.address-fade-transition-enter-active {
-	opacity: 1;
-	transition: opacity 300ms ease-in;
-}
-.address-fade-transition-enter-done {
-	opacity: 1;
-}
-.address-fade-transition-exit {
-	opacity: 1;
-	position: absolute;
-	top: 0;
-}
-.address-fade-transition-exit-active {
-	opacity: 0;
-	transition: opacity 300ms ease-out;
-}
-.address-fade-transition-done {
-	opacity: 0;
+
+	.wc-block-components-address-card-wrapper,
+	.wc-block-components-address-form-wrapper {
+		transition: all 300ms ease-in-out;
+		width: 100%;
+	}
+
+	&.is-editing {
+		.wc-block-components-address-form-wrapper {
+			opacity: 1;
+		}
+		.wc-block-components-address-card-wrapper {
+			opacity: 0;
+			visibility: hidden;
+			position: absolute;
+			top: 0;
+		}
+	}
+
+	&:not(.is-editing) {
+		.wc-block-components-address-form-wrapper {
+			opacity: 0;
+			visibility: hidden;
+			height: 0;
+		}
+		.wc-block-components-address-card-wrapper {
+			opacity: 1;
+		}
+	}
 }
